fixing a werid behavior on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -457,6 +457,8 @@ h2.subtitle {
 }
 
 .section-skills p {
+	width: 100vw;
+	text-align: center;
 	color: #777;
 }
 .section-skills p a {
